# bern-rtos

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE.md  README.md
.cargo/: config  config.toml
arch/: Cargo.toml  README.md  build.rs
arch/src/: core.rs  lib.rs  memory_protection.rs  scheduler.rs  startup.rs  sync.rs  syscall.rs
arch/src/cortex_m/: core.rs  interrupt.rs  memory_protection.rs  mod.rs  mpu.rs  register.rs  scheduler.rs  startup.rs  sync.rs  syscall.rs  tick.rs
arch/src/mock/: mod.rs
kernel/: .gitignore  Cargo.toml  README.md  bern.x  bern.x.in  build.rs
kernel/base_types/: Cargo.toml
kernel/base_types/src/: lib.rs  memory_size.rs
kernel/common/: Cargo.toml
kernel/common/src/: lib.rs  process.rs
kernel/conf/: Cargo.toml  LICENSE.md  README.md  conf.rs
kernel/conf_type/: Cargo.toml  README.md
kernel/conf_type/src/: lib.rs
kernel/macros/: Cargo.toml  README.md
kernel/macros/src/: enum_map.rs  lib.rs  process.rs
kernel/macros/tests/: enum_map.rs  process.rs
kernel/src/: alloc.rs  exec.rs  kernel.rs  lib.rs  log.rs  mem.rs  process.rs  sched.rs  stack.rs  sync.rs  syscall.rs  task.rs  time.rs
kernel/src/alloc/: allocator.rs  bump.rs  const_pool.rs  heap.rs  pool.rs  wrapper.rs
kernel/src/exec/: interrupt.rs  process.rs  runnable.rs  task.rs  thread.rs  worker.rs
kernel/src/kernel/: static_memory.rs
kernel/src/log/: defmt.rs  log_defmt.rs  rtt.rs  stub.rs
kernel/src/mem/: allocator.rs  array_pool.rs  boxed.rs  bump_allocator.rs  linked_list.rs  mod.rs  pool_allocator.rs  queue.rs  strict_allocator.rs  wrapper.rs
kernel/src/mem/queue/: mpmc_linked.rs  mpsc_const.rs  spsc_const.rs
kernel/src/sched/: event.rs  idle.rs
kernel/src/sync/: channel.rs  critical_mutex.rs  critical_section.rs  ipc.rs  ipc_spsc.rs  mpsc.rs  mutex.rs  semaphore.rs  spsc.rs
kernel/src/sync/ipc/: channel.rs  semaphore.rs  spsc.rs
kernel/tests/: README.md
kernel/tests/arm_cm4/: Cargo.toml  README.md  build.rs  memory.x
kernel/tests/arm_cm4/tests/: latency_isr_bypass.rs  latency_isr_kernel.rs  memory_protection.rs  mutex.rs  probe-rs.rs  semaphore.rs  serial.rs  task.rs  thread.rs  timing_isr_bypass.rs  timing_isr_kernel.rs  timing_semaphore.rs
kernel/tests/arm_cm4/tests/common/: main.rs  mod.rs
kernel/tests/arm_cm4/tests/common_latency/: main.rs  measure_latency.py
kernel/tests/arm_cm4/tests/common_timing/: main.rs  mod.rs
kernel/tests/script/: isr_latency.dwf3work  measure_latency.py  plot_results.py  requirements.txt  test_fixture.py  timing_tests.py
kernel/tests/script/digital_discovery/: digital_discovery.py  dwfconstants.py
kernel/units/: Cargo.toml  README.md
kernel/units/src/: frequency.rs  lib.rs  memory_size.rs  time.rs
platform/segger_cortex_m_trace/: Cargo.toml  build.rs  memory.x
platform/segger_cortex_m_trace/examples/: jtrace_cortex_m_reference.rs
platform/segger_cortex_m_trace/src/: lib.rs
platform/st_nucleo_f446/: Cargo.toml  build.rs  memory.x
platform/st_nucleo_f446/examples/: nucleo_f446_dev.rs  rtt_global.rs
platform/st_nucleo_f446/remote/: openocd.cfg
platform/st_nucleo_f446/src/: lib.rs  trace.rs
util/rtos_trace/: Cargo.toml
util/rtos_trace/src/: lib.rs  macros.rs  trace.rs
util/segger_systemview/: Cargo.toml
util/segger_systemview/examples/: no_os.rs
util/segger_systemview/lib/Config/: SEGGER_SYSVIEW_Conf.h
util/segger_systemview/lib/Sample/COMM/: SEGGER_SYSVIEW_REC.h
util/segger_systemview/lib/Sample/COMM/UART/: SEGGER_SYSVIEW_Config_UART.c
util/segger_systemview/lib/Sample/FreeRTOSV9/: SEGGER_SYSVIEW_FreeRTOS.c  SEGGER_SYSVIEW_FreeRTOS.h
util/segger_systemview/lib/Sample/NoOS/Config/Cortex-M/: SEGGER_SYSVIEW_Config_NoOS.c
util/segger_systemview/lib/Sample/RTT/: Main_RTT_InputEchoApp.c  Main_RTT_PrintfTest.c
util/segger_systemview/lib/Sample/embOS/: SEGGER_SYSVIEW_embOS.c  SEGGER_SYSVIEW_embOS.h
util/segger_systemview/lib/Sample/uCOS-II/: SEGGER_SYSVIEW_uCOSII.c
util/segger_systemview/lib/Sample/uCOS-III/: os_trace_events.h
util/segger_systemview/lib/Sample/uCOS-III/Config/: os_cfg_trace.h
util/segger_systemview/src/: lib.rs  log.rs
util/systemview-target/examples/: no_os.rs
util/systemview-target/lib/Sample/COMM/IP/: SEGGER_SYSVIEW_COMM_IP_embOS_emNet.c
util/systemview-target/lib/Sample/FreeRTOSV10.4/: SEGGER_SYSVIEW_FreeRTOS.h
util/systemview-target/lib/Sample/FreeRTOSV8/: SEGGER_SYSVIEW_FreeRTOS.c
util/systemview-target/lib/Sample/MicriumOSKernel/: SEGGER_SYSVIEW_MicriumOSKernel.c
util/systemview-target/lib/Sample/NuttX/: SEGGER_SYSVIEW_NuttX.c  SEGGER_SYSVIEW_NuttX.h
util/systemview-target/lib/Sample/NuttX/Patch/: nuttx-8.2.diff
util/systemview-target/lib/Sample/uCOS-II/: os_trace_events.h
util/systemview-target/lib/Sample/uCOS-II/Config/: os_cfg_trace.h
util/systemview-target/src/: lib.rs  wrapper.h
util/systemview_target/: Cargo.toml  build.rs
util/systemview_target/examples/: no_os.rs
util/systemview_target/lib/Config/: SEGGER_SYSVIEW_Conf.h
util/systemview_target/lib/Sample/COMM/: SEGGER_SYSVIEW_REC.c
util/systemview_target/lib/Sample/FreeRTOSV8/: SEGGER_SYSVIEW_FreeRTOS.h
util/systemview_target/lib/Sample/FreeRTOSV8/Config/Cortex-M/: SEGGER_SYSVIEW_Config_FreeRTOS.c
util/systemview_target/lib/Sample/NoOS/Config/Cortex-M/: SEGGER_SYSVIEW_Config_NoOS.c
util/systemview_target/lib/Sample/NoOS/Config/Cortex-M0/: SEGGER_SYSVIEW_Config_NoOS_CM0.c
util/systemview_target/lib/Sample/NuttX/Config/Cortex-M/: SEGGER_SYSVIEW_Config_NuttX.c
util/systemview_target/lib/Sample/RTT/: Main_RTT_MenuApp.c  Main_RTT_SpeedTestApp.c
util/systemview_target/lib/Sample/embOS/Config/Cortex-M/: SEGGER_SYSVIEW_Conf_example.h
util/systemview_target/lib/Sample/embOS/Config/MAX3263x/: SEGGER_SYSVIEW_Config_embOS_MAX3263x.c
util/systemview_target/lib/Sample/uCOS-III/: SEGGER_SYSVIEW_uCOSIII.c
util/systemview_target/lib/Sample/uCOS-III/Config/RX/: SEGGER_SYSVIEW_Config_uCOSIII.c
util/systemview_target/lib/impl/: systemview_conf_cortex_m.c
util/systemview_target/src/: lib.rs  log.rs  macros.rs  stub.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+27 files in other folders)
