[package]
name = "bern-base-types"
version = "0.1.0"
authors = ["Stefan Lüthi <stefan.luethi@outlook.com>"]
edition = "2021"
license = "MIT"
categories = ["embedded", "no-std"]
keywords = ["embedded", "no_std", "cortex-m", "iot", "rtos"]
description = "Base types for bern-kernel."
documentation = "https://docs.rs/bern-base-types"
repository = "https://gitlab.com/bern-rtos/kernel/bern-kernel"
homepage = "https://bern-rtos.org"
