[package]
name = "bern-conf"
version = "0.1.0"
authors = ["Stefan Lüthi <stefan.luethi@outlook.com>"]
edition = "2018"
license = "MIT"
categories = ["embedded", "no-std"]
keywords = ["embedded", "no_std", "cortex-m", "iot", "rtos"]
description = "Bern RTOS default configuration."
documentation = "https://docs.rs/bern-conf"
repository = "https://gitlab.com/bern-rtos/kernel/bern-kernel"
homepage = "https://bern-rtos.org"

[lib]
path = "conf.rs"

[dependencies]
bern-conf-type = "0.1.0"

[package.metadata.docs.rs]
targets = [
    "thumbv7em-none-eabi",
    "thumbv7em-none-eabihf",
    "thumbv7m-none-eabi",
]