[package]
name = "bern-conf-type"
version = "0.2.1"
authors = ["Stefan Lüthi <stefan.luethi@outlook.com>"]
edition = "2021"
license = "MIT"
categories = ["embedded", "no-std"]
keywords = ["embedded", "no_std", "cortex-m", "iot", "rtos"]
description = "Bern RTOS configuration type."
documentation = "https://docs.rs/bern-conf-type"
repository = "https://gitlab.com/bern-rtos/bern-rtos"
homepage = "https://bern-rtos.org"

[dependencies]
bern-units = "0.1"

[package.metadata.docs.rs]
targets = [
    "thumbv7em-none-eabi",
    "thumbv7em-none-eabihf",
    "thumbv7m-none-eabi",
]