[package]
name = "bern-kernel-macros"
version = "0.1.0"
authors = ["Stefan Lüthi <stefan.luethi@outlook.com>"]
edition = "2018"

[lib]
proc-macro = true

[[test]]
name = "enum"
path = "tests/enum_map.rs"

[dependencies]
proc-macro2 = "1.0.20"
quote = "1.0.7"
syn = { version = "1.0.40", features = ["extra-traits", "full"] }

toml = "0.5.8"
serde = "1.0.125"
serde_derive = "1.0.125"