[package]
name = "bern-units"
version = "0.1.0"
authors = ["Stefan Lüthi <stefan.luethi@outlook.com>"]
edition = "2021"
license = "MIT"
categories = ["embedded", "no-std"]
keywords = ["embedded", "no_std", "cortex-m", "iot", "rtos"]
description = "Base types for bern-kernel."
documentation = "https://docs.rs/bern-units"
repository = "https://gitlab.com/bern-rtos/bern-rtos"
homepage = "https://bern-rtos.org"

[dependencies]
derive_more = "0.99.17"