[package]
name = "st-nucleo-f446"
version = "0.1.0"
authors = ["Stefan Lüthi <stefan.luethi@outlook.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7.2"
embedded-hal = "0.2.4"
stm32f4xx-hal = { version = "0.11", features = ["rt", "stm32f411"] }

[dev-dependencies]
bern-kernel = { version = "*", features = ["log-defmt"] }
#bern-kernel = { version = "*", features = ["log-defmt", "log-defmt-rtt"] }

defmt = "0.3.1"
defmt-rtt = "0.3.0"


# Optimize all dependencies
#[profile.dev.package."*"]
#opt-level = "s"
