[package]
authors = ["Stefan Lüthi <stefan.luethi@outlook.com"]
name = "test-armv7e-m"
publish = false
edition = "2021"
version = "0.1.0"

[[test]]
name = "arm_cm4-thread"
path = "tests/thread.rs"
harness = false

[[test]]
name = "arm_cm4-semaphore"
path = "tests/semaphore.rs"
harness = false

[[test]]
name = "arm_cm4-mutex"
path = "tests/mutex.rs"
harness = false

[[test]]
name = "arm_cm4-memory-protection"
path = "tests/memory_protection.rs"
harness = false

[[test]]
name = "arm_cm4-timing-isr-kernel"
path = "tests/timing_isr_kernel.rs"
harness = false

[[test]]
name = "arm_cm4-timing-isr-bypass"
path = "tests/timing_isr_bypass.rs"
harness = false

[[test]]
name = "arm_cm4-timing-semaphore"
path = "tests/timing_semaphore.rs"
harness = false

[dependencies]
#bern-kernel = { path = "../../../kernel", features = ["log-defmt"] }
bern-kernel = { path = "../../../kernel" }
#bern-kernel = "*"
bern-test = { version = "0.1.0" }
st-nucleo-f446 = { version = "*", path = "../../../platform/st_nucleo_f446"}

cortex-m-rt = "0.7.1"
cortex-m = "0.7.2"
nb = "1.0.0"

embedded-hal = "0.2.4"

defmt = "0.3.0"
defmt-rtt = "0.3.0"